--- a/api/composer.json
+++ b/api/composer.json
@@ -25,6 +25,8 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "illuminate/collections": "^8.48",
+        "illuminate/database": "^8.48",
+        "lulco/phoenix": "^1.8",
         "monolog/monolog": "^2.2",
         "php-di/php-di": "^6.3",
         "slim/psr7": "^1.3",
