--- a/api/composer.json
+++ b/api/composer.json
@@ -30,8 +30,11 @@
         "lulco/phoenix": "^1.8",
         "monolog/monolog": "^2.2",
         "php-di/php-di": "^6.3",
+        "rbdwllr/reallysimplejwt": "^4.0",
         "slim/psr7": "^1.3",
-        "slim/slim": "^4.7"
+        "slim/slim": "^4.7",
+        "tuupola/slim-jwt-auth": "^3.5",
+        "vlucas/phpdotenv": "^5.3"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^0.8.1",
